<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.history.PriceHistoryFragment">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_xlarge"
        android:layout_margin="@dimen/margin_xmedium"
        android:src="@drawable/icon_covalent_logo_tri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_wallet_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xmedium"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/background_edit_text"
        android:ellipsize="end"
        android:fontFamily="@font/titillium_regular"
        android:hint="@string/hint_eth_wallet_address"
        android:lines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toStartOf="@+id/button_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/background_button"
        android:fontFamily="@font/titillium_bold"
        android:text="@string/text_go"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_wallet_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_wallet_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:alpha=".6"
        android:background="#1A212A"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_xsmall"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_wallet_address">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:text="@string/text_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:text="@string/text_rank"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_balance_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_enter_wallet_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:fontFamily="@font/titillium_bold"
        android:text="@string/text_enter_wallet_address"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view_balance_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_view_balance_list" />

    <View
        android:id="@+id/view_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".6"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/view_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>