<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.history.PriceHistoryFragment">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="@dimen/size_small"
        android:layout_height="@dimen/size_small"
        android:layout_margin="@dimen/margin_medium"
        android:src="@drawable/icon_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xmedium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:fontFamily="@font/titillium_bold"
        android:text="@string/text_price_history"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_coin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title">

        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="@dimen/size_medium"
            android:layout_height="@dimen/size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginBottom="@dimen/margin_xsmall"
            android:fontFamily="@font/titillium_bold"
            android:lines="1"
            android:maxLines="1"
            android:text="ETH"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toEndOf="@id/image_view_icon"
            app:layout_constraintTop_toTopOf="@id/image_view_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_bold"
            android:lines="1"
            android:maxLines="1"
            android:text="Ethereum"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/text_size_xsmall"
            app:layout_constraintBottom_toBottomOf="@id/image_view_icon"
            app:layout_constraintStart_toStartOf="@+id/text_view_code"
            app:layout_constraintTop_toBottomOf="@id/text_view_code" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:gravity="center"
            android:text="100"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="@id/text_view_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_code" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="#20272C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".6"
        android:background="#1A212A"
        android:paddingStart="@dimen/padding_xmedium"
        android:paddingTop="@dimen/padding_xsmall"
        android:paddingEnd="@dimen/padding_xmedium"
        android:paddingBottom="@dimen/padding_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_coin_details">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:text="@string/text_date"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:text="@string/text_value"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxsmall"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/button_view_on_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_view_on_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/background_button"
        android:fontFamily="@font/titillium_bold"
        android:text="@string/text_view_on_chart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>